# CPP-Practise

headerpracitse/add/: Makefile  add  main.cpp
headerpracitse/tutorialspoint/: Makefile  a.out  factorial.cpp  main.cpp
troy/01-basic/A-hello-cmake/: CMakeLists.txt
troy/01-basic/A-hello-cmake/cpp/: main.cpp
troy/01-basic/B-hello-headers/: CMakeLists.txt
troy/01-basic/B-hello-headers/cpp/: Makefile
troy/01-basic/B-hello-headers/cpp/src/: Makefile  helloheaders
troy/01-basic/C-static-library/: CMakeLists.txt
troy/01-basic/C-static-library/cpp/: Makefile
troy/01-basic/C-static-library/cpp/src/: Hello.cpp
troy/01-basic/C-static-library/src/: main.cpp
troy/01-basic/D-shared-library/: CMakeLists.txt
troy/01-basic/D-shared-library/cpp/: Makefile  shared_library
troy/01-basic/D-shared-library/src/: main.cpp
troy/01-basic/E-installing/: CMakeLists.txt  cmake-examples.conf
troy/01-basic/E-installing/src/: Hello.cpp  main.cpp
troy/01-basic/F-build-type/: CMakeLists.txt  main.cpp
troy/01-basic/G-compile-flags/: CMakeLists.txt  main.cpp
troy/01-basic/H-third-party-library/: CMakeLists.txt  main.cpp
troy/01-basic/I-compling-with-clang/: CMakeLists.txt
troy/01-basic/I-compling-with-clang/build.clang/: CMakeCache.txt  Makefile  cmake_install.cmake  hello_cmake
